# lychee-qt6-plugins

./: CMakeLists.txt  README.md
.github/workflows/: archlinux-build.yaml
decoration-plugin/: CMakeLists.txt  lycheedecoration.cpp  lycheedecoration.h  main.cpp
platformtheme-plugin/: CMakeLists.txt  lycheeplatformtheme.cpp  lycheeplatformtheme.h  main.cpp  qxdgdesktopportalfiledialog.cpp  qxdgdesktopportalfiledialog_p.h
